FLINK-16697][metrics][jmx] Disable rebinding